manifests/base/paddock/deployment_config.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    application: paddock
  name: paddock
spec:
  replicas: 1
  selector:
    deploymentConfig: paddock
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - paddock
      - pitcrew
      from:
        kind: ImageStreamTag
        name: paddock:latest
        namespace: b4mad-racing
    type: ImageChange
  template:
    metadata:
      labels:
        application: paddock
        deploymentConfig: paddock
      name: paddock
    spec:
      containers:
        - env:
            - name: DATABASE_URL
              valueFrom:
                secretKeyRef:
                  name: db-pguser-paddock
                  key: uri
          image: paddock:latest
          imagePullPolicy: Always
          name: paddock
          command: ["/bin/sh", "-c"]
          args:
            - python /opt/app-root/src/manage.py collectstatic -i "*.py" -i "*.pyc" --noinput --link;
              uwsgi --http "0.0.0.0:8000" --module paddock.wsgi:application --master --processes 4 --threads 2 --static-map /static=/opt/app-root/src/static
          ports:
            - containerPort: 8000
              name: django-http
              protocol: TCP
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - env:
            - name: DATABASE_URL
              valueFrom:
                secretKeyRef:
                  name: db-pguser-paddock
                  key: uri
          image: paddock:latest
          imagePullPolicy: Always
          name: pitcrew
          command: ["/bin/sh", "-c"]
          args:
            - python /opt/app-root/src/manage.py pitcrew
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          livenessProbe:
            httpGet:
              path: /healthz/live
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /healthz/ready
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 1
      serviceAccount: paddock
      serviceAccountName: paddock
