manifests/base/paddock/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: paddock
  name: paddock
spec:
  ports:
    - name: django-web
      port: 8000
      targetPort: django-http
  selector:
    app: paddock
