manifests/base/paddock/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    haproxy.router.openshift.io/timeout: 30s
  name: paddock
spec:
  rules:
    - host: paddock.dev.b4mad.racing
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: paddock
                port:
                  name: django-web
  tls:
    - hosts:
        - paddock.dev.b4mad.racing
      secretName: https-cert-paddock.dev.b4mad.racing
